providers/dns/tests/snapshots/routing__02-lookup-resolvers.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 2: lookup / :: resolvers
entry: resolvers file
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
