providers/dns/tests/snapshots/routing__04-lookup-cloudflare.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 4: lookup / :: @cloudflare
entry: @cloudflare dir
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
