providers/dns/tests/snapshots/routing__05-lookup-example-com.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 5: lookup / :: example.com
entry: example.com dir
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
