providers/dns/tests/snapshots/routing__06-lookup-8-8-8-8.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 6: lookup / :: 8.8.8.8
not-found
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
