providers/dns/tests/snapshots/routing__08-list-reverse.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 8: list /reverse
README.md  file  unknown  stable
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
