providers/dns/tests/snapshots/routing__10-lookup-not-an-ip.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 10: lookup /reverse :: not-an-ip
not-found
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
