providers/dns/tests/snapshots/routing__12-lookup-reverse.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 12: lookup /@cloudflare :: reverse
entry: reverse dir
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
