providers/dns/tests/snapshots/routing__16-lookup-not-an-ip.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 16: lookup /@cloudflare/reverse :: not-an-ip
not-found
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
